
17/10/23 v.1.2.0
- Added auto-Stage for pre-Vacuum
- Added inputs for Cloud goal (Vaporization) and a diviver as to when start saving for more Clouds on Vaporization
- Save mass for Preons now checks corresponding Strangeness upgrade

16/10/23 v.1.1.3
- Preon turning OFF for mass saving now triggers after 100k Energy for smoother progression to next Collapse

16/10/23 v.1.1.2
- minor script behaviour fixes
- Save mass now only triggers once Cloud goal is reached
- added some more checks for cornerstone situations

16/10/23 v.1.1.1
- added check for Cycling to stop when whole script disabled
- fixed automation turning ON if you don't have Save mass enabled

13/10/23 v.1.1.0
- added buttons and input fields (have tips on what they do) to better control script **MUCH thanks to Tobes!!!**
- now buttons' backgrounds are darker green\red depending on state for better visual control.
- reformated script to work with new buttons\input fields.
- 'vacuumCloudMulti' renamed to 'cloudMultiplier' and now also used for pre-Vacuum Vaporization.
- now new buildings' auto-toggles are turned ON if not 'Saving mass' to prevent stale.
- set initial multiplier for Vacuum Vaporization to triple what you have. First Vap. should give you visual 2+ Clouds.
- fix for Save mass not working as intended.

12/10/23 v.1.0.2
- added 'cycleReset' variable to be able to stop vacuum cycling in console. Type 'cycleReset = 1' in console,
it's value will automatically return to 0 after stopping cycle.
- cycling now stops switching when you turn it off instead of finishing cycle.
But continues at next tabs if you turn it back before end of current cycle.
- script auto building now uses in-game inputted delay when you have at least 1 lvl in Strangeness 'More toggles',
otherwise it is usual double-price.
- "Advanced" tab - now also takes active Void into account, if you are not in Void - exit Advanced tab only after
moving mouse over Vacuum image or script might work incorrectly.