@@ -1,4 +1,8 @@
 
+17/10/23 v.1.2.1
+- changed default Cloud goal to 0 (was 10000) and Cloud multiplier to 2 (was 9)
+- added a check to hide\show some buttons\inputs depending on game progress
+
 17/10/23 v.1.2.0
 - Added auto-Stage for pre-Vacuum
 - Added inputs for Cloud goal (Vaporization) and a diviver as to when start saving for more Clouds on Vaporization
